2008-08-17  Jonathan Pryor  <jpryor@novell.com>

	* Lambda.cs: Added; helpers to create "standard" delegate types.

2008-08-17  Jonathan Pryor  <jpryor@novell.com>

	* String.cs: Rename NamedCaptures to CaptureNamedGroups.

2008-08-17  Jonathan Pryor  <jpryor@novell.com>

	* Int16.cs, Int64.cs, UInt16.cs, UInt32.cs, UInt64.cs: Added; extension
	  methods .IsEven() and .IsOdd() for short, ushort, uint, long, ulong.
	  Patch courtesy of Kim Johansson.
	* Int32.cs: Add .IsEven() and .IsOdd().

2008-08-14  Jonathan Pryor  <jpryor@novell.com>

	* Tuple.cs, Tuples.cs: Remove some Gendarme warnings.

2008-08-14  Bojan Rajkovic  <bojanr@brandeis.edu>

	* String.cs: Added convenience regex methods: Matches,
	  Captures and NamedCaptures.

2008-08-08  Jonathan Pryor  <jpryor@novell.com>

	* Stream.cs: Change Stream.Read(out string, int, Encoding) to
	  Stream.Read(int, Encoding, out string) to conform to FxDG.

2008-08-08  Jonathan Pryor  <jpryor@novell.com>

	* Stream.cs: Add Stream.Write(byte[]) extension method.

2008-08-08  Jonathan Pryor  <jpryor@novell.com>

	* Stream.cs: Assert Steam.CanRead/Stream.CanWrite, as appropriate.

2008-08-08  Jonathan Pryor  <jpryor@novell.com>

	* Stream.cs: Add .Read() extension methods to extract a value from a stream.
	  Thanks to Bojan Rajkovic for the patch.

2008-08-08  Jonathan Pryor  <jpryor@novell.com>

	* Stream.cs: Remove the Stream.AsEnumerable() extension
	  method, as the semantics were incorrect.  Consider:
	    IEnumerable<byte> b = stream.AsEnumerable(); 
	    b.Skip(2).Apply(); 
	    b.Skip(2).Apply();
	  With Stream.AsEnumerable(), it would increase stream.Position by 4,
	  thus the `b.Skip()` calls are remembered.  If you use _any_ other
	  IEnumerable<T> type, the first .Skip() has no effect on the second
	  .Skip().

	  I couldn't think of a decent workaround, thus while it's "cute" the
	  semantics of a Stream-backed IEnumerable<byte> don't match the
	  semantics of other IEnumerable<byte>s, so I removed it.
