@@ -1,3 +1,8 @@
+2008-08-18  Jonathan Pryor  <jpryor@novell.com>
+
+	* StringTest.cs: Rename .Matches() to .MatchValues(); add tests for
+	  .Matches().
+
 2008-08-17  Jonathan Pryor  <jpryor@novell.com>
 
 	* LambdaTest.cs: Added; tests Lambda.Func(), Lambda.Expression().
